syntax = "proto3";

package db_api;

service db_api{
  rpc AddWork(ProtoWork) returns (ProtoWorkIndex);
  rpc GetWork(ProtoWorkIndex) returns (ProtoWork);
  rpc GetAllWorks(Empty) returns (GetAllWorksResponse);
  rpc EditWork(ProtoWorkParam) returns (ProtoWork);
}
enum WorkParamEnum {
  Name = 0;
  Desc = 1;
  DateStart = 2;
  DateEnd = 3;
}

message ProtoWorkParam {
  string index = 1;
  WorkParamEnum enum = 2;
  string value = 3;
}

message ProtoWork {
  string name = 1;
  string desc = 2;
  int64 date_start = 3;
  int64 date_end = 4;
}

message ProtoWorkIndex{
  string index = 1;
}

message GetAllWorksResponse {
  repeated ProtoWorkWithId works = 1;
}

message Empty {}

message ProtoWorkWithId {
  string name = 1;
  string desc = 2;
  int64 date_start = 3;
  int64 date_end = 4;
  string index = 5;
}